--- a/client/src/App.css
+++ b/client/src/App.css
@@ -140,16 +140,12 @@ header .navbar .navbar-brand {
   background-color: #ebebeb;
   border-radius: 7px;
   box-shadow: 1px 3px 13px #333;
-  /* overflow: hidden;
-  width: 50px;
-  transition: width 7s; */
 }
-/* header .navbar .navbar-brand:hover {
-  overflow: auto;
-  width: auto;
-} */
+
 header .navbar .navbar-brand:hover span {
   display: block;
+  -webkit-animation: logoAnimate 1s linear;
+  animation: logoAnimate 1s linear;
 }
 header .navbar .navbar-brand span {
   padding: 5px;
@@ -159,9 +155,17 @@ header .navbar .navbar-brand span {
   font-weight: bold;
   margin-left: 0;
   display: none;
-  /* opacity: 0; */
 }
-
+@keyframes logoAnimate {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  to {
+    display: block;
+    opacity: 1;
+  }
+}
 .navbar button.navbar-toggler {
   border: 3px aliceblue solid;
   color: aliceblue;
@@ -966,4 +970,52 @@ section {
 }
 .features .card-body {
   color: #333;
+}
+
+/*--------------------------------------------------------------
+# Blog Post
+--------------------------------------------------------------*/
+
+div.post {
+  /* background-color: #ccc; */
+  display: grid;
+  grid-template-columns: 0.9fr 1.1fr;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+div.post .postText h2 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+/*--------------------------------------------------------------
+# Form Login and Register
+--------------------------------------------------------------*/
+
+.formReg {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 100px;
+  border-radius: 10px;
+}
+
+.formReg input {
+  display: block;
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 5px 7px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.formReg button {
+  width: 100%;
+  display: block;
+  background-color: #555;
+  color: #fff;
+  border: 0;
+  border-radius: 5px;
+  padding: 7px;
 }
